<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	<Button android:layout_gravity="center" android:onClick="onClick"
		android:layout_width="174dp" android:text="@string/ssinglerotation"
		android:layout_height="wrap_content" android:gravity="center|center_horizontal"
		android:id="@+id/simplesinglerotation"></Button>
	<Button android:layout_width="174dp" android:layout_gravity="center"
		android:onClick="onClick" android:gravity="center|center_horizontal"
		android:layout_height="wrap_content" android:id="@+id/singlerotation"
		android:text="@string/singlerotation"></Button>
	<Button android:layout_gravity="center" android:onClick="onClick"
		android:layout_width="174dp" android:layout_height="wrap_content"
		android:gravity="center|center_horizontal" android:id="@+id/doublerotation"
		android:text="@string/doublerotation"></Button>
	<Button android:layout_gravity="center" android:onClick="onClick"
		android:layout_width="174dp" android:layout_height="wrap_content"
		android:gravity="center|center_horizontal" android:id="@+id/avldelete" android:text="@string/avldelete"></Button>
	<Button android:layout_gravity="center" android:onClick="onClick"
		android:layout_width="174dp" android:layout_height="wrap_content"
		android:gravity="center|center_horizontal" android:id="@+id/btreeinsert"
		android:text="@string/btreeinsert"></Button>

</LinearLayout>
