<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:weightSum="1" android:orientation="vertical">
	<TextView android:layout_height="wrap_content"
		android:layout_width="match_parent" android:text="@string/probeselection"
		android:id="@+id/probedisplay"></TextView>
	<Button android:layout_gravity="center" android:onClick="onClick"
		android:layout_width="174dp" android:layout_height="wrap_content"
		android:gravity="center|center_horizontal" android:text="@string/linearprobe"
		android:id="@+id/linearprobe"></Button>
	<Button android:layout_width="174dp" android:layout_gravity="center"
		android:onClick="onClick" android:gravity="center|center_horizontal"
		android:layout_height="wrap_content" android:text="@string/quadradicprobe"
		android:id="@+id/quadradicprobe"></Button>
	<Button android:layout_gravity="center" android:onClick="onClick"
		android:layout_width="174dp" android:layout_height="wrap_content"
		android:gravity="center|center_horizontal" android:id="@+id/chainingprobe"
		android:text="@string/chainingprobe"></Button>
	<ListView android:layout_width="match_parent" android:clickable="true" android:id="@+id/hashList"
		android:layout_height="202dp" android:layout_weight="0.86"></ListView>
	<TextView android:layout_gravity="center_horizontal"
		android:layout_width="wrap_content" android:clickable="true" android:layout_height="wrap_content"
		android:id="@+id/hashlisttextheader" android:text="@string/hashlistheader"
		android:onClick="onAddItem"></TextView>
</LinearLayout>
