<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/numberofnodes"
		android:id="@+id/textNodesQ"></TextView>
	<EditText android:layout_width="match_parent"
		android:layout_height="wrap_content" android:inputType="number"
		android:id="@+id/enterNodeNumber" android:numeric="integer"
		android:text="7">
		<requestFocus></requestFocus>
	</EditText>

	<Button android:layout_width="174dp" android:text="Bubble Sort"
		android:id="@+id/bubble" android:layout_gravity="center"
		android:onClick="onClick" android:gravity="center|center_horizontal"
		android:layout_height="wrap_content"></Button>
	<Button android:layout_width="174dp" android:text="Shaker Sort"
		android:id="@+id/shaker" android:layout_gravity="center"
		android:onClick="onClick" android:gravity="center|center_horizontal"
		android:layout_height="wrap_content"></Button>
	<Button android:gravity="center|center_horizontal"
		android:onClick="onClick" android:layout_gravity="center"
		android:layout_height="wrap_content" android:layout_width="174dp"
		android:id="@+id/quick" android:text="@string/quick"
		android:visibility="gone"></Button>
	<RelativeLayout android:id="@+id/relativeLayout1"
		android:layout_width="match_parent" android:layout_height="match_parent">
		<TextView android:layout_height="wrap_content" android:text="@string/movingfowardnote"
			android:gravity="center_vertical|center_horizontal"
			android:layout_width="wrap_content" android:id="@+id/textView1"
			android:textSize="17dp" android:layout_alignParentBottom="true"
			android:layout_marginBottom="32dp" android:layout_centerHorizontal="true"></TextView>
	</RelativeLayout>
</LinearLayout>
